# quasar-lv2

./: Dockerfile  hugo.toml  manifest.ttl.in  meson.build  meson_options.txt  quasar.c  quasar.ttl  readme.md
.github/workflows/: codeql.yml  meson.yml  torture.yml  website.yml
content/: home.md
themes/hugo-goa-modified/layouts/partials/: avatar.html  header.html  info.html  sub_footer.html
themes/hugo-goa-modified/static/css/: custom.css
